--- a/Space Invaders (Android)/app/src/main/res/layout/credits_menu.xml
+++ b/Space Invaders (Android)/app/src/main/res/layout/credits_menu.xml
@@ -5,17 +5,20 @@
     
     <LinearLayout
         style="@style/Layout.CenterLinearLayout" >
-    
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"/>
+
 	    <!-- Überschrift -->
 	    <com.dreede.spaceinvaders.view.FontTextView
 			style="@style/Widget.TextView.H.H1"
 	        android:text="@string/credits"
 	        android:textColor="@color/red"
 		/>
-	
-	    
-	    
-	    <ScrollView 
+
+	    <ScrollView
 	        style="@style/Layout.ScrollView">
 		    <LinearLayout
 			    android:layout_width="match_parent"
@@ -32,6 +35,12 @@
 		        
 		    </LinearLayout>
 	    </ScrollView>
+
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="1"/>
+
 	  </LinearLayout>
     
     <com.dreede.spaceinvaders.view.FontButton
