--- a/Space Invaders (Android)/app/src/main/res/layout/pause_menu.xml
+++ b/Space Invaders (Android)/app/src/main/res/layout/pause_menu.xml
@@ -4,17 +4,26 @@
 
     
    <LinearLayout
-        style="@style/Layout.CenterLinearLayout" > 
-        
+        style="@style/Layout.CenterLinearLayout" >
+
+	   <View
+		   android:layout_width="match_parent"
+		   android:layout_height="match_parent"
+		   android:layout_weight="1"/>
+
 	    <!-- Überschrift -->
 	    <com.dreede.spaceinvaders.view.FontTextView
 			style="@style/Widget.TextView.H.H1"
 	        android:text="@string/pause"
 	        android:textColor="@color/red"
 		/>
-	
-	    
-	    
+
+
+	   <View
+		   android:layout_width="match_parent"
+		   android:layout_height="match_parent"
+		   android:layout_weight="1"/>
+
 	    <ScrollView 
 	        style="@style/Layout.ScrollView" >
 		    
@@ -47,6 +56,11 @@
 			     
 		    </LinearLayout>
 	    </ScrollView>
+		   <View
+			   android:layout_width="match_parent"
+			   android:layout_height="match_parent"
+			   android:layout_weight="1"/>
+
     </LinearLayout>
    
    <com.dreede.spaceinvaders.view.FontButton
