--- a/Space Invaders (Android)/app/src/main/res/layout/game_over.xml
+++ b/Space Invaders (Android)/app/src/main/res/layout/game_over.xml
@@ -2,10 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Layout.MainLinearLayout" >
 
-    
     <LinearLayout
         style="@style/Layout.CenterLinearLayout" >
-    
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"/>
+
 	    <com.dreede.spaceinvaders.view.FontTextView
 	        style="@style/Widget.TextView.H.H1"
 	        android:text="@string/game_over"
@@ -54,6 +58,12 @@
 		        </TableRow>
 		    </TableLayout>
 		 </ScrollView>
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"/>
+
 	</LinearLayout>
 
     <LinearLayout
