--- a/Space Invaders (Android)/app/src/main/res/layout/load.xml
+++ b/Space Invaders (Android)/app/src/main/res/layout/load.xml
@@ -2,12 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Layout.MainLinearLayout" >
 
-    
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
+
     <!-- Überschrift -->
     <com.dreede.spaceinvaders.view.FontTextView
 		style="@style/Widget.TextView.H.H1"
         android:text="@string/loading"
         android:textColor="@color/red"
 	/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
 
 </LinearLayout>
