--- a/Space Invaders (Android)/app/src/main/res/layout/load_game_menu.xml
+++ b/Space Invaders (Android)/app/src/main/res/layout/load_game_menu.xml
@@ -6,14 +6,23 @@
     
     <LinearLayout
         style="@style/Layout.CenterLinearLayout" >
-    
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"/>
+
 	    <!-- Überschrift -->
-	
 	    <com.dreede.spaceinvaders.view.FontTextView
 	        style="@style/Widget.TextView.H.H1"
 	        android:text="@string/load_game"
 	        android:textColor="@color/red" />
-	
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"/>
+
 	    <ScrollView
 	        style="@style/Layout.ScrollView" >
 	
@@ -46,6 +55,12 @@
 	            </TableRow>
 	        </TableLayout>
 	    </ScrollView>
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"/>
+
 	  </LinearLayout>
 
  <com.dreede.spaceinvaders.view.FontButton
