--- a/Space Invaders (Android)/app/src/main/res/layout/start_menu.xml
+++ b/Space Invaders (Android)/app/src/main/res/layout/start_menu.xml
@@ -2,16 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Layout.MainLinearLayout" >
 
-    
+
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1"/>
+
     <!-- Überschrift -->
-    <com.dreede.spaceinvaders.view.FontTextView
+	<com.dreede.spaceinvaders.view.FontTextView
 		style="@style/Widget.TextView.H.H1"
         android:text="@string/app_name"
         android:textColor="@color/red"
 	/>
 
     
-    
+    <View
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1"/>
+
     <ScrollView 
         style="@style/Layout.ScrollView">
 	    <LinearLayout
@@ -51,5 +60,10 @@
 		    
 	    </LinearLayout>
     </ScrollView>
+
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1"/>
     
 </LinearLayout>
